# code-to-markdown-context-dumper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
code_to_markdown_context_dumper/: __init__.py  __main__.py  core.py
tests/: test_cli.py  test_core.py
